@@ -1,10 +1,8 @@
-requires 'perl' => '>= 5.018';
-
-requires 'Carp'                      => '0';
-requires 'Data::Dumper'              => '0';
-requires 'DateTime::Format::RFC3339' => '0';
-requires 'Exporter'                  => '0';
-requires 'Math::BigInt'              => '>= 1.999718';
+requires 'perl'         => '>= 5.018';
+requires 'Carp'         => '0';
+requires 'Data::Dumper' => '0';
+requires 'Exporter'     => '0';
+requires 'Math::BigInt' => '>= 1.999718';
 
 recommends 'Types::Serialiser' => 0;
 
